<resources>
    <string name="app_name">RebelityTerminal</string>
    <string name="app_copyright">Copyright \u00a9 2020 Rebelity Software Ltd. Co. </string>
    <string name="app_login_title">LOG IN</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_validate">Username is required</string>
    <string name="login_password_validate">Password is required</string>
    <string name="app_logo_image">App Logo Image</string>
    <string name="app_logout_image">App Logout Image</string>
    <string name="upcoming_event">UPCOMING EVENTS</string>
    <string name="upcoming_event_image">Upcoming Event Image</string>
    <string name="event_list_event">Event</string>
    <string name="event_list_instance">Instance</string>
    <string name="event_list_contact">Contact List</string>
    <string name="terminal_setup">TERMINAL SETUP</string>
    <string name="terminal_list_terminal">Terminal</string>
    <string name="terminal_list_status">Status</string>
    <string name="terminal_connect">CONNECT</string>
    <string name="register_new_reader">REGISTER NEW READER</string>
    <string name="terminal_register">REGISTER</string>
    <string name="terminal_register_cancel">CANCEL</string>
    <string name="card_terminal_registration">Card Terminal Registration</string>
    <string name="register_note_no1">1.</string>
    <string name="register_note1">Connect a card reader to your network and power it on.</string>
    <string name="register_note_no2">2.</string>
    <string name="register_note2">Using the card reder pinpad, enter the key sequence 0-7-1-3-9.</string>
    <string name="register_note_no3">3.</string>
    <string name="register_note3">The terminal will display a unique registration code. Enter it below along with a unique label to identify this reader.</string>
    <string name="register_reader_code">Code: </string>
    <string name="register_reader_label">Label: </string>

    <string name="print_queue_label">Print Queue</string>
    <string name="events_tab_label">EVENTS</string>
    <string name="terminal_tab_label">TERMINAL SETUP</string>
    <string name="guests_tab_label">GUESTLIST</string>
    <string name="tickets_tab_label">TICKETS</string>
    <string name="sales_tab_label">SALES</string>
    <string name="ticket_init_quantity">(0) /</string>
    <string name="ticket_init_price">$0</string>
    <string name="ticket_items_label">(ITEMS) / </string>
    <string name="ticket_total_label">(SUBTOTAL($)</string>
    <string name="ticket_thumbnail">Ticket Thumbnail</string>
    <string name="ticket_scan_option">SCAN OPTIONS</string>
    <string name="ticket_radio_instance">INSTANCE</string>
    <string name="ticket_radio_event">EVENT</string>
    <string name="ticket_scan_button">SCAN</string>
    <string name="ticket_cash_sale">CASH SALE</string>
    <string name="ticket_card_sale">CARD SALE</string>
    <string name="ticket_barcode_hint"> barcode</string>
    <string name="price_list_ticket">Ticket</string>
    <string name="price_list_quantity">qty</string>
    <string name="price_list_price">price</string>
    <string name="price_list_total">total</string>
    <string name="per_ticket_discount">PER TICKET DISCOUNT</string>
    <string name="ticket_discount_hint">discount value</string>
    <string name="discount_type_none">None</string>
    <string name="discount_type_percent">Percent</string>
    <string name="discount_type_dollar">Dollar value</string>
    <string name="discount_card_name">COUPLES TICKET</string>
    <string name="discount_card_price">$180.00</string>

    <string name="total_sales_label">Total Sales:</string>
    <string name="online_label">Online:</string>
    <string name="card_label">Card:</string>
    <string name="cash_label">Cash:</string>
    <string name="search_button">Search</string>
    <string name="sales_header_tickets">Tickets</string>
    <string name="sales_header_customer">Customer</string>
    <string name="sales_header_info">Sales</string>
    <string name="sales_header_action">Action</string>
    <string name="sales_list_refund">Refund</string>
    <string name="sales_list_tickets">Tickets</string>

    <string name="attendance_label">Attendance:</string>
    <string name="guests_label">Guests:</string>
    <string name="vips_label">VIP\'s:</string>
    <string name="checked_label">Checked in:</string>

    <string name="guests_header_name">Name</string>
    <string name="guests_header_confirmed">Confirmed</string>
    <string name="guests_header_status">Status</string>

    <string name="guest_check_in">Check in</string>
    <string name="guest_checked_in">Checked In</string>
    <string name="guest_status_used">Used</string>
</resources>
