<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_reader_view"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/mid_gap_size">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_gap_size"
        android:text="@string/card_terminal_registration"
        android:textSize="@dimen/accent_font_size"
        android:textColor="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/mid_gap_size"
        android:paddingStart="@dimen/mid_gap_size"
        android:paddingRight="0dp"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note_no1"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note1"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/mid_gap_size"
        android:paddingStart="@dimen/mid_gap_size"
        android:paddingRight="0dp"
        android:paddingEnd="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note_no2"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note2"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/mid_gap_size"
        android:paddingStart="@dimen/mid_gap_size"
        android:paddingRight="0dp"
        android:paddingEnd="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note_no3"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_gap_size"
            android:paddingStart="@dimen/small_gap_size"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:text="@string/register_note3"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_reader_code"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:hint=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_reader_label"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:hint=""
            android:importantForAutofill="no" />
    </LinearLayout>
    <Button
        android:id="@+id/terminal_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/terminal_connect_height"
        android:layout_marginTop="@dimen/small_gap_size"
        android:background="@drawable/connect_button_bg"
        android:text="@string/terminal_register"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_gap_size"
        android:background="@drawable/login_validation_bg"
        android:padding="@dimen/small_gap_size"
        android:text="@string/login_username_validate"
        android:textColor="@android:color/white"
        android:visibility="visible" />

</LinearLayout>