<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/gray_color"
    android:padding="@dimen/s_gap_size">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="center_horizontal"
        android:text="@string/guests_header_name"
        android:textAllCaps="true"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center_horizontal"
        android:text="@string/guests_header_confirmed"
        android:textAllCaps="true"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center_horizontal"
        android:text="@string/guests_header_status"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
</LinearLayout>