<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_color">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:padding="@dimen/small_gap_size"
        android:text="@string/price_list_ticket"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:paddingTop="@dimen/small_gap_size"
        android:paddingBottom="@dimen/small_gap_size"
        android:text="@string/price_list_quantity"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:padding="@dimen/small_gap_size"
        android:text=""
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:padding="@dimen/small_gap_size"
        android:text="@string/price_list_price"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:padding="@dimen/small_gap_size"
        android:text="@string/price_list_total"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:padding="@dimen/small_gap_size"
        android:text=""
        android:textColor="@color/black"/>
</LinearLayout>