<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="@dimen/ticket_total_container_width"
            android:layout_height="@dimen/ticket_total_container_height"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ticket_total_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/ticket_total_price"
                    android:text="@string/ticket_init_quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/accent_font_size"
                    android:layout_toStartOf="@+id/ticket_total_price" />
                <TextView
                    android:id="@+id/ticket_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ticket_init_price"
                    android:textStyle="bold"
                    android:textColor="@color/red_color"
                    android:textSize="@dimen/accent_font_size"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/ticket_subtotal_label"
                    android:layout_toStartOf="@+id/ticket_subtotal_label"
                    android:text="@string/ticket_items_label"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/ticket_subtotal_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/ticket_total_label"
                    android:textStyle="bold"
                    android:textColor="@color/red_color"/>
            </RelativeLayout>
        </LinearLayout>
        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/tickets_cancel_button"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@drawable/cancel_button_bg"
            android:text="@string/fa_times_solid"
            android:textColor="@color/red_color"
            android:textStyle="bold"
            android:textSize="@dimen/accent_font_size"
            app:solid_icon="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tickets_container_bg"
        android:paddingLeft="@dimen/small_gap_size"
        android:paddingStart="@dimen/small_gap_size"
        android:paddingRight="@dimen/small_gap_size"
        android:paddingEnd="@dimen/small_gap_size"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/ticket_thumbnail"
            android:layout_width="@dimen/ticket_thumbnail_width"
            android:layout_height="@dimen/ticket_thumbnail_height"
            android:layout_marginTop="@dimen/small_gap_size"
            android:layout_marginBottom="@dimen/small_gap_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/thumbnail"
            android:contentDescription="@string/ticket_thumbnail"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap_size"
            android:layout_marginBottom="@dimen/small_gap_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/ticket_thumbnail"
            android:layout_marginLeft="@dimen/small_gap_size"
            android:layout_toEndOf="@id/ticket_thumbnail"
            android:layout_marginStart="@dimen/small_gap_size">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_gap_size"
                    android:text="@string/ticket_scan_option"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ticket_radio_instance" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_radio_event" />
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ticket_edit_height"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/ticket_scan"
                        android:paddingVertical="@dimen/small_gap_size"
                        android:background="@drawable/barcode_edit_bg"
                        android:hint="@string/ticket_barcode_hint"
                        android:inputType="number"
                        android:padding="@dimen/small_gap_size"
                        android:text=""
                        android:textSize="@dimen/small_font_size"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_color"
                        android:autofillHints="" tools:targetApi="o"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/ticket_scan" />
                    <Button
                        android:id="@+id/ticket_scan"
                        android:layout_width="@dimen/scan_button_width"
                        android:layout_height="@dimen/scan_button_height"
                        android:background="@drawable/scan_button_bg"
                        android:layout_alignParentRight="true"
                        android:text="@string/ticket_scan_button"
                        android:textColor="@color/white"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ticket_cash_sale"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket_card_sale"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/dark_green_color"/>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/small_gap_size"
        android:layout_marginRight="@dimen/small_gap_size"
        android:visibility="visible">

        <include
            layout="@layout/ticket_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/ticket_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_gap_size"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_gap_size"
            android:text="@string/per_ticket_discount"
            android:textColor="@color/colorPrimaryDark" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_gap_size"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/discount_type_none"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:checked="true"
                android:text="@string/discount_type_none" />

            <RadioButton
                android:id="@+id/discount_type_percent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/discount_type_percent" />

            <RadioButton
                android:id="@+id/discount_type_dollar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/discount_type_dollar" />
        </RadioGroup>

        <EditText
            android:id="@+id/ticket_discount_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ticket_edit_height"
            android:layout_marginLeft="@dimen/discount_edit_left"
            android:layout_marginStart="@dimen/discount_edit_left"
            android:autofillHints=""
            android:background="@drawable/discount_edit_bg"
            android:hint="@string/ticket_discount_hint"
            android:inputType="number"
            android:padding="@dimen/small_gap_size"
            android:text=""
            android:textSize="@dimen/small_font_size"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_color"
            android:enabled="false"
            tools:targetApi="o" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ticket_discount_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/ticket_recycler_margin"
        android:layout_marginRight="@dimen/ticket_recycler_margin"
        android:layout_marginBottom="@dimen/small_gap_size"
        android:nestedScrollingEnabled="false" tools:targetApi="lollipop"/>
</LinearLayout>